# raylib_windows_vscode_mingw_template_project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gen.ps1
src/: CMakeLists.txt  main.cpp
